--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "leveldown": "^3.0.0",
     "lodash": "^4.17.5",
     "mongoose": "^5.0.9",
-    "npm": "^5.7.1"
+    "npm": "^5.7.1",
+    "redis": "^2.8.0"
   }
 }
