--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^5.0.1",
     "ioredis": "^3.2.2",
     "lodash": "^4.17.5",
+    "mongoose": "^5.0.17",
     "require-all": "^2.2.0"
   }
 }
