--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bignumber.js": "^7.2.0",
     "bitcoin-core": "^2.0.0",
     "bluebird": "^3.5.1",
     "bunyan": "^1.8.12",
